jenkinsfile updated with Java 11